--- a/app/src/main/res/layout/map.xml
+++ b/app/src/main/res/layout/map.xml
@@ -1,8 +1,30 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
+
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.puninar.jakpark.Map" />
+    tools:context="hackjak.pantidev.tako.Map" />
+
+    <android.support.v7.widget.SwitchCompat
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Traffic  "
+        android:id="@+id/swTraffic"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:theme="@style/TrafficSwitch"
+        />
+
+</RelativeLayout>
