--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,14 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TrafficSwitch" parent="Theme.AppCompat.Light">
+        <!-- active thumb & track color (30% transparency) -->
+        <item name="colorControlActivated">#1abc9c</item>
+
+        <!-- inactive thumb color -->
+        <item name="colorSwitchThumbNormal">#42221f1f
+        </item>
+
+    </style>
+
 </resources>
