--- a/app/src/main/res/layout/report.xml
+++ b/app/src/main/res/layout/report.xml
@@ -7,6 +7,17 @@
     android:orientation="vertical"
     >
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#72b1ff"
+        android:text="Lapor"
+        android:textStyle="bold"
+        android:textSize="50sp"
+        android:layout_marginBottom="30sp"
+        android:textAlignment="center"
+        android:gravity="center_vertical"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,6 +27,7 @@
         android:layout_marginRight="5sp"
         android:layout_marginLeft="5sp"
         >
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -66,18 +78,23 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.55"
             android:id="@+id/spnEvent"
+
             />
     </LinearLayout>
 
 
+
+
     <ImageView
-        android:layout_width="50sp"
+        android:layout_width="match_parent"
         android:layout_height="50sp"
         android:src="@android:drawable/ic_menu_camera"
+        android:background="@drawable/box_ash"
+        android:backgroundTint="#baebff"
         android:layout_marginTop="10sp"
         android:layout_marginBottom="5sp"
-        android:layout_marginRight="5sp"
-        android:layout_marginLeft="5sp"
+        android:layout_marginRight="25sp"
+        android:layout_marginLeft="25sp"
         android:id="@+id/ivCamera"/>
 
     <LinearLayout
@@ -89,20 +106,22 @@
         android:layout_marginRight="5sp"
         android:layout_marginLeft="5sp"
         android:orientation="horizontal"
-        android:gravity="center"
-        android:background="@drawable/box_border">
+        android:gravity="center">
 
     </LinearLayout>
 
 
         <EditText
             android:layout_marginTop="10sp"
+            android:padding="10sp"
             android:layout_marginBottom="5sp"
             android:layout_marginRight="5sp"
             android:layout_marginLeft="5sp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80sp"
             android:id="@+id/txtPesan"
+            android:background="@drawable/box_ash"
+            android:hint="pesan mengenai masalah"
             android:lines="4"
             />
 
@@ -110,34 +129,53 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:weightSum="3"
         android:layout_marginTop="10sp"
         android:layout_marginBottom="5sp"
         android:layout_marginRight="5sp"
         android:layout_marginLeft="5sp"
         >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textColor="#000"
-            android:text="Pelapor"
-            android:gravity="center_vertical"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.45"
-            android:text=":"
-            android:gravity="center"
-            android:textColor="#000"
-            />
-        <EditText
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.55"
-            android:id="@+id/txtPelapor"
-            />
+            android:layout_marginLeft="5sp"
+            android:layout_marginRight="5sp"
+            android:layout_weight="1">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.2"
+                android:textColor="#000"
+                android:text="Pelapor"
+                android:gravity="center_vertical"
+                />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.05"
+                android:text=":"
+                android:gravity="center"
+                android:textColor="#000"
+                />
+            <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.75"
+                android:id="@+id/txtPelapor"
+                />
+        </LinearLayout>
+
+        <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="kirim laporan"
+        android:background="@drawable/box_ash"
+        android:backgroundTint="#99ff99"
+        android:padding="20sp"
+        android:layout_margin="20sp"
+            android:onClick="submitReport"/>
     </LinearLayout>
 
 </LinearLayout>
