--- a/app/src/main/res/layout/detail_marker.xml
+++ b/app/src/main/res/layout/detail_marker.xml
@@ -9,7 +9,7 @@
         android:layout_height="30dp"
         android:layout_gravity="right"
         android:background="@drawable/box_ash"
-        android:text="Report"
+        android:text="Lapor"
         android:textColor="@color/font"
         android:textAllCaps="false"
         android:layout_margin="5dp"
@@ -253,7 +253,7 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/box_ash"
                     android:gravity="center"
-                    android:text="1"
+                    android:text="-"
                     android:textColor="@color/font"
                     android:textSize="35sp"
                     android:id="@+id/tvRepLingkungan"/>
@@ -305,7 +305,7 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/box_ash"
                     android:textColor="@color/font"
-                    android:text="1"
+                    android:text="-"
                     android:textSize="35sp"
                     android:gravity="center"
                     android:id="@+id/tvRepKejahatan"
