--- a/app/src/main/res/layout/detail_marker.xml
+++ b/app/src/main/res/layout/detail_marker.xml
@@ -20,7 +20,6 @@
         android:layout_height="wrap_content"
         android:weightSum="3"
         android:layout_marginTop="5sp"
-        android:layout_marginBottom="5sp"
         android:layout_marginRight="5sp"
         android:layout_marginLeft="5sp"
         >
@@ -55,7 +54,6 @@
         android:layout_height="wrap_content"
         android:weightSum="3"
         android:layout_marginTop="10sp"
-        android:layout_marginBottom="5sp"
         android:layout_marginRight="5sp"
         android:layout_marginLeft="5sp"
         >
@@ -72,6 +70,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1.45"
             android:text=":"
+            android:gravity="center"
             android:textColor="@color/font"
             />
         <TextView
@@ -89,7 +88,6 @@
         android:layout_height="wrap_content"
         android:weightSum="3"
         android:layout_marginTop="10sp"
-        android:layout_marginBottom="5sp"
         android:layout_marginRight="5sp"
         android:layout_marginLeft="5sp"
         >
@@ -124,7 +122,6 @@
         android:layout_height="wrap_content"
         android:weightSum="3"
         android:layout_marginTop="10sp"
-        android:layout_marginBottom="5sp"
         android:layout_marginRight="5sp"
         android:layout_marginLeft="5sp"
         >
@@ -159,7 +156,6 @@
         android:layout_height="wrap_content"
         android:weightSum="3"
         android:layout_marginTop="10sp"
-        android:layout_marginBottom="20sp"
         android:layout_marginRight="5sp"
         android:layout_marginLeft="5sp"
         >
@@ -188,6 +184,42 @@
             />
         
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="3"
+        android:layout_marginTop="10sp"
+        android:layout_marginBottom="20sp"
+        android:layout_marginRight="5sp"
+        android:layout_marginLeft="5sp"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.1"
+            android:textColor="@color/font"
+            android:text="Ruang Laktasi"
+            android:gravity="center_vertical"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.45"
+            android:text=":"
+            android:gravity="center"
+            android:textColor="@color/font"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.45"
+            android:id="@+id/tvLaktasi"
+            android:textColor="@color/font"
+            />
+
+    </LinearLayout>
+
 
     <TextView
         android:layout_width="match_parent"
